<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView1"
        android:textColor="#ff7f00"
        android:textSize="26sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="100dip" />

    <RadioGroup
        android:id="@+id/radiogroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtrg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_group1"
            android:textColor="#ff7f00"
            android:textSize="28sp"
            android:typeface="monospace" />

        <RadioButton
            android:id="@+id/radiobutton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button1" />

        <RadioButton
            android:id="@+id/radiobutton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_button2" />
    </RadioGroup>

    <Button
        android:id="@+id/next"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radiogroup1"
        android:background="@drawable/camera"
        android:gravity="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radiogroup1"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/album" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
        android:layout_marginTop="30sp"
        android:digits="0123456789.-"
        android:hint="@string/latitude" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button2"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_alignBaseline="@+id/next"
        android:layout_alignBottom="@+id/next"
        android:layout_toRightOf="@+id/button1"
        android:background="@drawable/upload"
        android:scaleType="centerInside" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et1"
        android:digits="0123456789.-"
        android:hint="@string/longitude" >
    </EditText>

    <Button
        android:id="@+id/quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et2"
        android:text="@string/quit"
        android:textSize="20sp" />

</RelativeLayout>